--- a/Biostatistic error.ipynb
+++ b/Biostatistic error.ipynb
@@ -69,7 +69,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model2interact <- lm(LDL1 ~ HT + age + BMI + physact + LDL + diabetes + diabetes*LDL, data=data)"
+        "model2interact <- lm(LDL1 ~ HT + age + BMI + physact + LDL + diabetes + HT*LDL, data=data)"
       ],
       "metadata": {
         "id": "_j5Mvgp0his0"
