--- a/Biostatistic error.ipynb
+++ b/Biostatistic error.ipynb
@@ -80,7 +80,7 @@
     {
       "cell_type": "code",
       "source": [
-        "interact_plot(model2interact, pred=LDL, modx=diabetes)"
+        "interact_plot(model2interact, pred=LDL, modx=HT)"
       ],
       "metadata": {
         "colab": {
